# Automat

./: urls.txt
2_lab/: CMakeLists.txt  main.cpp  my_regex.cpp  my_regex.hpp
2_lab/regex_compile/: CMakeLists.txt  DKA.cpp  DKA.hpp  regex_tree.hpp  token.cpp  token.hpp
2_lab/test/: CMakeLists.txt  test.cpp  tokens_test.cpp
3lab/: CMakeLists.txt  actions.c  actions.h  field.c  func.c  func.h  gc.c  gc.h  lexer.l  maze.c  maze.h  parser.y  robot.c  robot.h  types.h  values.c  values.h  variables.c  variables.h
3lab/.trunk/: trunk.yaml
3lab/tests/: 01_vars.in  02_if.in  03_else.in  04_loop.in  05_arith.in  06_logic.in  07_cell.in  07_cell.out  08_array.in  09_field.in  09_field.out  10_dim.in  11_type.in  11_type.out  12_array.in  12_array.out  13_maze.in  13_maze.out  14_func.in  CMakeLists.txt  maze.txt  run_and_compare.sh
DK/: DK.hpp  a.out  main.cpp
lab1_flex/: a.out  flex.l  lex.yy.c  makefile
lab1_minimization/.trunk/: trunk.yaml
smc-git-code/: .gitignore  Makefile  README.txt  smc.mk
smc-git-code/examples/Tcl/EX4/: Makefile  Stoplight.tcl  Vehicle.tcl  traffic.tcl
smc-git-code/examples/Tcl/EX5/: Makefile  Task.tcl  taskMan.tcl
smc-git-code/lib/Groovy/: statemap.groovy
smc-git-code/net/sf/smc/: Makefile
smc-git-code/net/sf/smc/generator/: Makefile  SmcCGenerator.java  SmcCppGenerator.java  SmcGraphGenerator.java  SmcGroovyGenerator.java  SmcHeaderCGenerator.java  SmcJava7Generator.java
smc-git-code/net/sf/smc/model/: Makefile  SmcAction.java  SmcElement.java  SmcFSM.java  SmcGuard.java  SmcMap.java  SmcParameter.java  SmcState.java  SmcTransition.java
smc-git-code/net/sf/smc/parser/: Makefile  SmcParser.java  SmcParser.sm
temp/smc_7_6_0/lib/Perl/: README.txt
temp/smc_7_6_0/lib/Ruby/: README.txt
